add prefix to title of webpage #1123

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ table_style }}" />
     <link rel="stylesheet" type="text/css" href="{{ custom_style }}" />
     <head>
-        <title>FitBenchmarking Fitting Report</title>
+        <title>{{ run_name }}FitBenchmarking Fitting Report</title>
     </head>
     <body>
         <div class="wrapper">
