--- a/fitbenchmarking/templates/problem_index_page.html
+++ b/fitbenchmarking/templates/problem_index_page.html
@@ -8,7 +8,7 @@
     <script id="MathJax-script" async src="{{ mathjax }}"></script>
 
     <head>
-        <title>{{ group_name }} results</title>
+        <title>{{ run_name }}{{ group_name }} results</title>
     </head>
     <body>
         <div class="box">
