--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{{ custom_style }}" />
 
 <head>
-    <title>FitBenchmarking problem summary page</title>
+    <title>{{ run_name }}FitBenchmarking problem summary page</title>
 </head>
 
 <body>
