--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -12,7 +12,7 @@
     <script id="MathJax-script" async src="{{ mathjax }}"></script>
     <script type="text/javascript" src="{{ table_js }}"></script>
     <head>
-        <title>Fitbenchmark Results Table</title>
+        <title>{{ run_name }}Fitbenchmark Results Table</title>
     </head>
     <body>
         <div class="box">
