--- a/fitbenchmarking/templates/index_page.html
+++ b/fitbenchmarking/templates/index_page.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{{ css_style_sheet }}" />
     <link rel="stylesheet" type="text/css" href="{{ custom_style }}" />
     <head>
-        <title> Index page</title>
+        <title> {{ run_name }}Index page</title>
     </head>
     <body>
         <div class="box">
