--- a/fitbenchmarking/templates/css/table_style.css
+++ b/fitbenchmarking/templates/css/table_style.css
@@ -38,10 +38,8 @@ th, td {
 }
 
 th a, td a {
-  display: table-row;
   color: rgb(30, 30, 30);
-  margin: -10em;
-  padding: 10em;
+  white-space: nowrap;
 }
 
 div.table{
