--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -107,8 +107,8 @@
                                     {% endfor %}
                                 </ol>
                                 <p>
-                                    This is likely due to the `algorithm_type` set in the options. Please review current options setup and re-run
-                                    FitBenchmarking.
+                                    This could be due to incompatible problem-cost function combinations or the `algorithm_type` set in the options.
+                                    Please review the logs and current options setup and re-run FitBenchmarking to see comparisons for these problems.
                                 </p>
                             {% endif %}
                             <h3>Errors</h3>
