--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -63,6 +63,7 @@
                     <p><em>Minimizer</em>: {{ minimizer }}</p>
                     <p><em>Accuracy</em>: {{ accuracy }}</p>
                     <p><em>Runtime</em>: {{ runtime }} seconds</p>
+                    <p><em>Emissions</em>: {{ emissions }} kg CO<sub>2</sub>eq</p>
                     <p><em>Functions</em>:</p>
                     <table>
                         <colgroup>
