--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -45,11 +45,11 @@
                         </tbody>
                     </table>
                     <div class="row">
-                        {% if initial_plot_available %}
-                            <img alt="{{ initial_plot }}" src="{{ initial_plot }}" />
-                        {% else %}
-                            <h3>{{ initial_plot }}</h3>
-                        {% endif %}
+                      {% if initial_plot_available %}
+		       <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ initial_plot }}"></iframe>
+                      {% else %}
+                        <h3>{{ initial_plot }}</h3>
+                      {% endif %}
                     </div>
                 </div>
             </section>
@@ -78,7 +78,7 @@
                     </p>
                     <div align="center" class="figure align-center">
                         {% if summary_plot_available %}
-                            <img alt="{{ summary_plot }}" src="{{ summary_plot }}" />
+		            <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ summary_plot }}"></iframe>
                         {% else %}
                             <h3>{{ summary_plot }}</h3>
                         {% endif %}
@@ -117,7 +117,7 @@
                         </table>
                         <div align="center" class="figure align-center">
                             {% if best_plots_available[0] %}
-                                <img alt="{{ best_plots[0] }}" src="{{ best_plots[0] }}" />
+			        <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ best_plots[0] }}"></iframe>
                             {% else %}
                                 <h3>{{ best_plots[0] }}</h3>
                             {% endif %}
@@ -157,7 +157,7 @@
                             </table>
                             <div align="center" class="figure align-center">
                                 {% if best_plots_available[loop.index0] %}
-                                    <img alt="{{ best_plots[loop.index0] }}" src="{{ best_plots[loop.index0] }}" />
+				    <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ best_plots[loop.index0] }}"></iframe>
                                 {% else %}
                                     <h3>{{ best_plots[loop.index0] }}</h3>
                                 {% endif %}
