Add number of parameters and data points to fitting report.

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -23,6 +23,8 @@
                         <label for="start-accordion">Problem Outline</label>
                     </h2>
                     <div class="content">
+                        <p><em>Number of parameters</em>: {{ n_params }}</p>
+                        <p><em>Number of data points</em>: {{ n_data_points }}</p>
                         <p><em>Functions</em>:</p>
                         <table>
                             <colgroup>
