--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -41,6 +41,7 @@
                             <div>
                                 {{ problem_dropdown }}
                                 {{ minimizer_dropdown }}
+                                {{ probsize_checkbox }}
                             </div>
                         </center>
 
