--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -139,9 +139,12 @@
                             <label for="handle3">Performance profile</label>
                             </h2>
                             <div class="content">
-                                {% for imgfile in pp_filenames %}
-                                    <img alt="{{ imgfile }}" src="{{ imgfile }}" />
-                                {% endfor %}
+                                <div class="graph">
+                                    {% for imgfile in pp_filenames %}
+                                        <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ imgfile }}">
+                                        </iframe>
+                                    {% endfor %}
+                                </div>
                                 <p>
                                     Fits are taken from all benchmarks, so if FitBenchmarking is run with
                                     ``n`` problems and ``m`` cost functions, the resulting profile plots will have
