Add warning on the use/interpretation of performance profiles.

--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -153,6 +153,15 @@
                                     The solvers appearing in the top left corner may be considered the best
                                     performing on this test set.
                                     See <a href="https://doi.org/10.1007/s101070100263">Dolan and Moré (2001)</a> for more information.
+                                    <br>
+                                    <br>
+                                    <b>
+                                        The plot is such that lines can be removed by clicking on the respective minimizer name in the legend.
+                                        However, the whole graph highly depends on the best minimizer (the one in the top left corner), that is,
+                                        each line is computed with respect to the best minimizer and should only be compared to the latter (rather
+                                        than to any other line in the graph). Currently, if a line is removed, the graph is not recalculated, which
+                                        means care should be taken in interpreting results after having removed lines.
+                                    </b>
                                 </p>
                             </div>
                         </section>
