Move closing tag to be inline with the rest.

--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -141,8 +141,7 @@
                             <div class="content">
                                 <div class="graph">
                                     {% for imgfile in pp_filenames %}
-                                        <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ imgfile }}">
-                                        </iframe>
+                                        <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ imgfile }}"></iframe>
                                     {% endfor %}
                                 </div>
                                 <p>
