Added paramonte software and Bayesian comparison framework (#1108)
* Add paramonte software #1106

* add support for bounds #1106

* change log likelihood function

* add confidence calculation (WIP)

* Add new comparison method

* fix failing tests

* linting fixes

* add paramonte

* add tests

* add paramonte to main workflow

* Add documentation

* switch from matplotlib to plotly

* add extra info to pdf plots

* add bayesian fitting docs page

* small changes

* linting fixes

* fix failing tests

* Install MS-MPI for windows tests

* switch to install intelmpi

* install mpi using paramonte prompt

* remove offline_plot call

* remove paramonte from windows tests

* linting fix

---------

Co-authored-by: Jess Farmer <jessica.farmer@stfc.ac.uk>
Co-authored-by: Jessica Farmer <79837359+jess-farmer@users.noreply.github.com>
Co-authored-by: Andrew Lister <48282025+AndrewLister-STFC@users.noreply.github.com>

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -89,6 +89,16 @@
                         {% else %}
                             <h3>{{ fitted_plot }}</h3>
                         {% endif %}
+                        {% if pdf_plot_available %}
+                            <h3>Estimated posterior pdf of each parameter</h3>
+                            <p>
+                                The vertical red line on each pdf shows the Scipy curve fit parameter estimate, with the dashed vertical red lines indicating the 2 sigma error of the fit.
+                                The area between the dashed lines is used to calculate the confidence in the MCMC fit.
+                            </p>
+                            <iframe width="100%" height="800" frameborder="0" seamless="seamless" scrolling="no" src="{{ pdf_plot }}"></iframe>
+                        {% else %}
+                            <h3>{{ pdf_plot }}</h3>
+                        {% endif %}
                         <button class="btn default" onclick="history.go(-1)">
                         <i class="fa fa-arrow-left"></i>
                         </button>
