--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -144,13 +144,16 @@
                                         <p> For a more interative plot (Dash), switch to "Online version" by clicking the button below.
                                             <b>This will only work if the Dash app is running.</b> </p>
                                         <div>
-                                        <button class="btn default" id="offline_plot{{index}}"
-                                                onclick="load_offline_src(this.value)">Offline version</button>
-                                        <button class="btn default" id="online_plot{{index}}"
-                                                onclick="load_online_src('{{dash_plot}}', '{{index}}')">Online version</button>
+                                        <button class="btn default" id="offline_plot{{ index }}"
+                                                data-value1="{{ offline_plot }}" data-value2="{{ index }}"
+                                                onclick="load_offline_src(this)">Offline version</button>
+
+                                        <button class="btn default" id="online_plot{{ index }}"
+                                                data-value1="{{ dash_plot }}" data-value2="{{ index }}"
+                                                onclick="load_online_src(this)">Online version</button>
                                         </div>
-                                        <p></p>
-                                        <iframe width="100%" height="500" id="i_frame{{index}}" frameborder="0" seamless="seamless" scrolling="no"
+                                        <br>
+                                        <iframe width="100%" height="500" id="i_frame{{ index }}" frameborder="0" seamless="seamless" scrolling="no"
                                                 src="{{ offline_plot }}"></iframe>
 
                                     {% endfor %}
