--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -146,11 +146,11 @@
                                         <div>
                                         <button class="btn default" id="offline_plot{{ index }}"
                                                 data-value1="{{ offline_plot }}" data-value2="{{ index }}"
-                                                onclick="load_offline_src(this)">Offline version</button>
+                                                onclick="load_src(this)">Offline version</button>
 
                                         <button class="btn default" id="online_plot{{ index }}"
                                                 data-value1="{{ dash_plot }}" data-value2="{{ index }}"
-                                                onclick="load_online_src(this)">Online version</button>
+                                                onclick="load_src(this)">Online version</button>
                                         </div>
                                         <br>
                                         <iframe width="100%" height="500" id="i_frame{{ index }}" frameborder="0" seamless="seamless" scrolling="no"
