--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -139,10 +139,10 @@
                             <label for="handle3">Performance profile</label>
                             </h2>
                             <div class="content">
-                                <div class="graph">
+                                <div>
+                                    <p> For a more interative plot (Dash), switch to "Online version" by clicking the button below.
+                                        <b>This will only work if the Dash app is running.</b> </p>
                                     {% for offline_plot, dash_plot, index in zipped_paths %}
-                                        <p> For a more interative plot (Dash), switch to "Online version" by clicking the button below.
-                                            <b>This will only work if the Dash app is running.</b> </p>
                                         <div>
                                         <button class="btn default" id="offline_plot{{ index }}"
                                                 data-value1="{{ offline_plot }}" data-value2="{{ index }}"
@@ -152,10 +152,11 @@
                                                 data-value1="{{ dash_plot }}" data-value2="{{ index }}"
                                                 onclick="load_src(this)">Online version</button>
                                         </div>
-                                        <br>
-                                        <iframe width="100%" height="500" id="i_frame{{ index }}" frameborder="0" seamless="seamless" scrolling="no"
-                                                src="{{ offline_plot }}"></iframe>
 
+                                        <iframe width="100%" height="500" id="i_frame{{ index }}" frameborder="0" seamless="seamless"
+                                                scrolling="no" style="margin-bottom: 25px" src="{{ offline_plot }}"></iframe>
+
+                                        <br>
                                     {% endfor %}
                                 </div>
                                 <p>
