Undo removal of class to html tag.

--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -139,7 +139,7 @@
                             <label for="handle3">Performance profile</label>
                             </h2>
                             <div class="content">
-                                <div>
+                                <div class="graph">
                                     <p> For a more interative plot (Dash), switch to "Online version" by clicking the button below.
                                         <b>This will only work if the Dash app is running.</b> </p>
                                     {% for offline_plot, dash_plot, index in zipped_paths %}
