--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -85,7 +85,7 @@
                                 {% for software, minimizer in unselected_minimzers.items() %}
                                     {% if minimizer != [] %}
                                         Within <strong>{{software}}</strong>, the following
-                                        minimizer(s) were not run due to the choice of <strong>{{algorithm_type}}</strong> 
+                                        minimizer(s) were not run due to the choice of <strong>{{algorithm_type}}</strong>
                                         for the algorithm type:
                                         <ol>
                                             {% for m in minimizer -%}
@@ -140,8 +140,23 @@
                             </h2>
                             <div class="content">
                                 <div class="graph">
-                                    {% for imgfile in pp_filenames %}
-                                        <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ imgfile }}"></iframe>
+                                    <p> For a more interative plot (Dash), switch to "Online version" by clicking the button below.
+                                        <b>This will only work if the Dash app is running.</b> </p>
+                                    {% for offline_plot, dash_plot, index in zipped_paths %}
+                                        <div>
+                                        <button class="btn default" id="offline_plot{{ index }}"
+                                                data-value1="{{ offline_plot }}" data-value2="{{ index }}"
+                                                onclick="load_src(this)">Offline version</button>
+
+                                        <button class="btn default" id="online_plot{{ index }}"
+                                                data-value1="{{ dash_plot }}" data-value2="{{ index }}"
+                                                onclick="load_src(this)">Online version</button>
+                                        </div>
+
+                                        <iframe width="100%" height="500" id="i_frame{{ index }}" frameborder="0" seamless="seamless"
+                                                scrolling="no" style="margin-bottom: 25px" src="{{ offline_plot }}"></iframe>
+
+                                        <br>
                                     {% endfor %}
                                 </div>
                                 <p>
