--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -146,11 +146,11 @@
                                     </p>
                                     <div>
                                         <button class="btn default" id="offline_plot"
-                                                data-value1="{{ pp_filenames | join('|') }}"
+                                                data-value1={{ pp_filenames | join("|") }}
                                                 data-value3="{{ n_solvers_large }}"
                                                 onclick="load_src(this)">Offline version</button>
                                         <button class="btn default" id="online_plot"
-                                                data-value1="{{ pp_dash_url }}"
+                                                data-value1={{ pp_dash_url }}
                                                 data-value3="{{ n_solvers_large }}"
                                                 onclick="load_src(this)">Online version</button>
                                     </div>
@@ -158,12 +158,12 @@
                                     <div class="iframe-wrapper">
                                         {% for offline_plot in pp_filenames %}
                                             <iframe width="100%" frameborder="0" seamless="seamless"
-                                                    src="{{ offline_plot }}" onload="adaptIframeHeight()"></iframe>
+                                                    src="{{ offline_plot }}" height={{ 100 if n_solvers_large else 650 }}></iframe>
                                             <br>
                                         {% endfor %}
                                     </div>
                                 </div>
-                                <p id="profiles_info" style="display:block">
+                                <p id="profiles_info" style={{"display:none" if n_solvers_large else "display:block"}}>
                                     Fits are taken from all benchmarks, so if FitBenchmarking is run with
                                     ``n`` problems and ``m`` cost functions, the resulting profile plots will have
                                     ``n*m`` steps on the y-axis.
