--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -178,6 +178,7 @@
                                     or hidden by unselecting the minimizer in the legend. If a solver is removed through the dropdown,
                                     the graph gets recalculated based on the best minimizer among the ones shown. On the other hand, if a solver
                                     is unselected in the legend, the line gets temporarily hidden and the plot is not recalculated.
+                                    We recommend only analysing graphs where lines are removed via the dropdown.
                                 </p>
                             </div>
                         </section>
