get bundle adjustment problems running

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -40,7 +40,11 @@
                             <tbody valign="top">
                                 <tr>
                                     <td>{{ equation }}</td>
-                                    <td>{{ initial_guess }}</td>
+                                    {% if list_params %}
+                                        <td>{{ initial_guess }}</td>
+                                    {% else %}
+                                        <td>Too many parameters to display</td>
+                                    {% endif %}
                                 </tr>
                             </tbody>
                         </table>
@@ -79,7 +83,11 @@
                         <tbody valign="top">
                             <tr>
                                 <td>{{ equation }}</td>
-                                <td>{{ min_params }}</td>
+                                {% if list_params %}
+                                    <td>{{ min_params }}</td>
+                                {% else %}
+                                    <td>Too many parameters to display</td>
+                                {% endif %}
                             </tr>
                         </tbody>
                     </table>
