updated tables to add blank cells in case of error

--- a/fitbenchmarking/templates/css/table_style.css
+++ b/fitbenchmarking/templates/css/table_style.css
@@ -94,3 +94,8 @@ td a.dark:active {
   transition:color .3s;
   color:rgba(0, 0, 0, 0.8)
  }
+
+span.blank {
+  color: #000000;
+  background-color: #e5e4e2;
+ }
