add number of iterations/function evaluations to fitting report

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -70,6 +70,7 @@
                     <p><em>Accuracy</em>: {{ accuracy }}</p>
                     <p><em>Runtime</em>: {{ runtime }} seconds</p>
                     <p><em>Emissions</em>: {{ emissions }}</p>
+                    <p>{{ iteration_count }}</p>
                     <p><em>Functions</em>:</p>
                     <table>
                         <colgroup>
