record iter count and func evals separately for minimizers that output both

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -70,7 +70,8 @@
                     <p><em>Accuracy</em>: {{ accuracy }}</p>
                     <p><em>Runtime</em>: {{ runtime }} seconds</p>
                     <p><em>Emissions</em>: {{ emissions }}</p>
-                    <p>{{ iteration_count }}</p>
+                    <p><em>Number of iterations</em>: {{ iteration_count }}</p>
+                    <p><em>Number of function evaluations</em>: {{ func_evals }}</p>
                     <p><em>Functions</em>:</p>
                     <table>
                         <colgroup>
